<resources>
    <string name="app_name">Login Application</string>
    <string name="log_in">Log in</string>
    <string name="tela_de_login">Tela de login</string>
    <string name="welcome_to_the_apps">Welcome to the apps</string>
    <string name="sign_up"><u>Sign Up</u></string>
    <string name="doesn_t_have_an_account_yet">Doesn\'t have an account yet?</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
</resources>